kube/configs/prod/load-balancer/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: load-balancer
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: load-balancer
    servicePort: 80
  rules:
  - host: api.eloyt.com
    http:
      paths:
      - path: /
        backend:
          serviceName: load-balancer
          servicePort: 80
  - host: eloyt.com
    http:
      paths:
      - path: /
        backend:
          serviceName: eloyt-com
          servicePort: 80
